# mic-drop

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  oracle-keypair.json  pose-match-instructions.md  start.sh  task-b-tracker.md  vercel.json
assets/songs/: manifest.json
backend/: main.py  oracle-keypair.json  requirements.txt
backend/ai/: commentary.py  config.py  host_live.py  host_tools.py  host_ws.py  mc_voice.py  router.py  sfx.py  tools.py  voices.py
backend/chain/: escrow.py  oracle.py  router.py
backend/common/: audio.py  pitch.py
backend/dance/: router.py  scorer.py
backend/data/: matches_store.py  router.py  snowflake_client.py  songs_store.py
backend/orchestration/: finish.py  router.py
backend/reference/: align.py  lyrics_lookup.py  router.py
backend/scoring/: __init__.py  router.py  scorer.py
backend/static/: host_voice.html  live.html  mc_test.html  mic_test.html
backend/transcription/: live_ws.py  lyrics.py  router.py  stt.py
contracts/: DIVERGENCES.md  dance.ts
docs/: dance-gamemode.md  pitch-battle-mvp-spec.md
docs /: pitch-battle-mvp-spec (1).md  speech-agent.md  stream-d-backend.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
program/: .mocharc.cjs  Anchor.toml  package-lock.json  package.json
program/programs/pitch-battle/: Cargo.toml
program/programs/pitch-battle/src/: lib.rs
server/: package-lock.json  package.json  render.yaml
tasks/: INTEGRATION.md  stream-A-solana.md  stream-B-audio.md  stream-C-frontend.md  stream-D-ai-glue.md
(+67 files in other folders)
