[package]
name = "pitch-battle"
version = "0.1.0"
description = "Pitch Battle escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pitch_battle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
